# ExamGen

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  demo_exam.py  examgen.db  pyproject.toml  requirements.txt  wrap_rows.patch
.github/: CODEOWNERS.css
docs/: accessibility.md  ui_validation_report.md
examgen/: auth.py  config.py  models.py
examgen/gui/: __init__.py  dialogs.py  login.py  main.py  questions_window.py  register.py  reset_pwd.py  settings.py  style.py  widgets.py
examgen/services/: exam_service.py
examgen/ui/: styles.py
examgen_web/: __init__.py  app.py
examgen_web/blueprints/: attempts.py  clone.py  exams.py  importer.py  main.py  player.py  settings.py
examgen_web/i18n/: translations.py
examgen_web/infra/: config.py  db.py  fileio.py  history.py  services.py
examgen_web/routes/: exams.py  export.py  health.py  home.py  importer.py  preview.py  questions.py  sections.py  settings.py
examgen_web/static/: app.css  import.js
examgen_web/templates/: base.html  dashboard.html  exam_detail.html  exam_form.html  exams_list.html  import_step1.html  import_step2_preview.html  import_step3_result.html  index.html  pdf_template.html  preview.html  (+3 more)
gui/: main.py
scripts/: backup_db.py
services/: importer.py
tests/: test_accessibility.py  test_db_binding.py  test_exams_routes.py  test_export_streaming.py  test_preview_export_routes.py  test_sections_questions_routes.py  test_web_attempts_smoke.py  test_web_exams_smoke.py  test_web_home_smoke.py  test_web_player_smoke.py  test_web_settings_smoke.py  test_web_smoke.py
(+86 files in other folders)
