[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "examgen"
version = "0.1.0"
dependencies = [
    "flask>=3.0,<4",
    "jinja2>=3.1,<4",
]

[project.scripts]
examgen = "examgen.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["examgen*"]

